# RCBOR

./: .Rbuildignore  .gitignore  DESCRIPTION  NAMESPACE  RCBOR.Rproj  README.Rmd  README.md  TODO.md  convert-m.pl  setup_arch_r_dev.sh
.github/workflows/: R-CMD-check.yaml
R/: extendr-wrappers.R  rcbor.r
inst/: WORDLIST
man/: decode.Rd  decode_cbor.Rd  encode.Rd  encode_cbor.Rd  rcbor_hello.Rd
src/: Makevars.in  Makevars.win.in  RCBOR-win.def  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
tests/: testthat.R
tests/testthat/: benchmarks.R  test-cbor.R
vignettes/: introduction-to-rcbor.Rmd
