[package]
# I renamed the crate to match the R package name exactly.
# REMINDER: This will produce a warning <-----ignore it
name = "RCBOR"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
extendr-api = "0.8.0"

# The "derive" feature is needed for the `#[derive(Serialize, Deserialize)]` macro.
serde = { version = "1.0", features = ["derive"] }

# The dependency for CBOR encoding and decoding.
ciborium = "0.2"

# IMPORTANT REMINDERS:
# A drop-in replacement for HashMap that preserves insertion order.
# The "serde" feature is needed for serialization.
indexmap = { version = "2.0", features = ["serde"] }
